# Terminal-Friendly-Markdown

./: .gitattributes  README.md  pyproject.toml
scripts/: setup_tfmd.sh  uninstall_tfmd.sh
tfmd/: cli.py
tfmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
